--- a/app/index.css
+++ b/app/index.css
@@ -4,7 +4,21 @@
 }
 
 .bar{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     width: 100%;
     background-color: black;
     height: 100px;
+}
+
+.dapIcon{
+    position: relative;
+    top: -80px;
+    width: 60px;
+    height: 60px;
+}
+
+.search{
+    
 }
