--- a/public/app/index.css
+++ b/public/app/index.css
@@ -9,13 +9,276 @@
     justify-content: center;
     width: 100%;
     background-color: black;
+    box-shadow: 1px 1px 1px 1px rgba(32,32,32,0.3);
     height: 100px;
 }
 
 .dapIcon{
     position: relative;
-    top: -80px;
-    width: 60px;
-    height: 60px;
+    left: 3%;
+    top: -83px;
+    width: 65px;
+    height: 65px;
+    transition: 0.2s;
 }
+
+.dap{
+    position: relative;
+    display: block;
+    width: 100px;
+    left: 8%;
+    top: -130px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 33px;
+}
+
+.search{
+    position: relative;
+    top: -110px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    padding: 7px;
+    text-align: center;
+    left: 30%;
+    border-color: transparent;
+    height: 40px;
+    width: 420px;
+    border-radius: 10px;
+    transition: 0.2s;
+    z-index: 50;
+}
+
+.searchIcon{
+    position: absolute;
+    left: 35%;
+    height: 25px;
+    width: 25px;
+    top: 40px;
+    z-index: 100;
+}
+
+.profile{
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 3%;
+    width: 80px;
+    height: 80px;
+    border-radius: 40px;
+    transition: 0.2s;
+}
+
+.name{
+    position: absolute;
+    color: white;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    right: 9%;
+    top: 60px;
+    transition: 0.2s;
+}
+
+.bar-icons{
+    width: 0px;
+    height: 0px;
+}
+
+.icons{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    justify-self: first baseline;
+    
+}
+
+.more{
+    width: 0px;
+    height: 0px;
+}
+
+.message{
+    width: 0px;
+    height: 0px;
+}
+
+.prof{
+    width: 0px;
+    height: 0px;
+}
+
+.search2{
+    width: 0px;
+    height: 0px; 
+}
+
+.house{
+    width: 0px;
+    height: 0px;  
+}
+
+/*responsive**/
+@media (max-width:600px){
+.bar{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    background-color: black;
+    box-shadow: 1px 1px 1px 1px rgba(32,32,32,0.3);
+    height: 100px;
+}
+}
+@media (max-width:600px){
+    .profile{
+        display: block;
+        position: absolute;
+        top: 25px;
+        right: 3%;
+        width: 50px;
+        height: 50px;
+        border-radius: 40px;
+    }
+}
+
+@media (max-width:600px){
+    .dapIcon{
+        display: block;
+        position: relative;
+        left: 3%;
+        top: -66px;
+        width: 40px;
+        height: 40px;
+    }
+}
+
+
+
+@media (max-width:600px){
+    .search{
+        background-color: transparent;
+        height: 0px;
+        width: 0px;
+    }
+}
+
+@media (max-width:600px){
+    .name{
+        position: absolute;
+        color: white;
+        font-size: 14px;
+        font-family: Arial, Helvetica, sans-serif;
+        right: 15%;
+        top: 64px;
+    }
+}
+
+@media (max-width:600px){
+    .dap{
+        position: absolute;
+        left: 10%;
+        top: 4;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 10px;
+    }
+}
+
+@media (max-width:600px){
+    .searchIcon{
+        
+        
+        height: 0px;
+        width: 0px;
+        
+    }
+}
+
+@media (max-width:600px){
+    .bar-icons{
+        position: absolute;
+        width: 100%;
+        height: 70px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        background-color: black;
+        bottom: 0;
+    } 
+}
+
+@media (max-width:600px){
+    .more{
+        width: 45px;
+        height: 45px;
+        margin: 10px;
+    }
+}
+
+@media (max-width:600px){
+    .more:hover{
+        width: 49px;
+        height: 49px;
+        margin: 10px;
+    }
+}
+
+@media (max-width:600px){
+    .message{
+        width: 45px;
+        height: 40px;
+        margin: 13px;
+    } 
+}
+@media (max-width:600px){
+    .message:hover{
+        width: 49px;
+        height: 44px;
+        margin: 13px;
+    } 
+}
+@media (max-width:600px){
+    .prof{
+        width: 45px;
+        height: 45px;
+        margin: 13px;
+    } 
+}
+@media (max-width:600px){
+    .prof:hover{
+        width: 49px;
+        height: 49px;
+        margin: 13px;
+    } 
+}
+@media (max-width:600px){
+    .search2{
+        width: 45px;
+        height: 45px;
+        margin: 13px;
+    } 
+}
+@media (max-width:600px){
+    .search2:hover{
+        width: 49px;
+        height: 49px;
+        margin: 13px;
+    } 
+}
+@media (max-width:600px){
+    .house{
+        width: 45px;
+        height: 45px;
+        margin: 13px;
+        margin-bottom: 30px;
+    } 
+}
+@media (max-width:600px){
+    .house:hover{
+        width: 49px;
+        height: 49px;
+        margin: 13px;
+        margin-bottom: 30px;
+    } 
+}
+
 
