--- a/public/app/components/lat/lat.css
+++ b/public/app/components/lat/lat.css
@@ -7,7 +7,7 @@
     margin-top: -90px;
 position: absolute;
    width: 200px;
-   height: 100%;
+   height: 620px;
    background-color: rgb(0, 0, 0);
 
 }
@@ -20,10 +20,24 @@ position: absolute;
    margin-top: 20px;
     padding: 30px 20px;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
     font-weight: bold;
     color: white;
     text-decoration: underline;
 }
+
+#sidebar ul li:hover {
+    margin-top: 20px;
+     padding: 30px 20px;
+     font-family: Arial, Helvetica, sans-serif;
+     font-weight: bold;
+     font-size: 20px;
+     color: white;
+     text-decoration: underline;
+     color: white; text-shadow: rgba(246, 209, 42, 0.924) 0.2em 0.2em 0.5em;
+ }
+
+
 
 .homi{
     padding-left: 10px;
