--- a/public/app/components/message/message.css
+++ b/public/app/components/message/message.css
@@ -1,11 +1,13 @@
 .Mcontent{
+    position: fixed;
     display: flex;
     flex-direction: column;
-    margin-left: 500px;
+    margin-left: 300px;
+    margin-top: -470px;
     justify-content: center;
     padding-left: 10px;
     width: 340px;
-    height: 640px;
+    height: 450px;
     overflow: scroll;
     overflow-x: hidden;
     background-color: black;
@@ -18,7 +20,7 @@
 
 .message-containercard{
     position: relative;
-    top: 130px;
+    top: 143px;
     width: 315px;
     
     background-color: #E8E8E8;
@@ -39,7 +41,7 @@
 .message-containercard p1{
     position: relative;
     
-    top: -13px;
+    top: -10px;
     left: 5%;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -63,8 +65,8 @@
 .imag{position: relative;
     top: 6px;
     left: 3%;
-    width: 70px;
-    height:  70px;
+    width: 60px;
+    height:  60px;
     border-radius: 40px;
 }
 
