--- a/public/app/index.css
+++ b/public/app/index.css
@@ -58,6 +58,28 @@
     z-index: 100;
 }
 
+.blackCont{
+    position: absolute;
+    top: 178px;
+    left: 300px;
+    background-color: rgb(0, 0, 0);
+    width: 350px;
+    height: 50px;
+    z-index: 5;
+}
+
+.messagecont{
+    position: absolute;
+    top: 195px;
+    left: 311px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    z-index: 10;
+
+
+}
+
 .profile{
     display: block;
     position: absolute;
