--- a/public/app/components/vid/vid.css
+++ b/public/app/components/vid/vid.css
@@ -23,18 +23,21 @@ z-index: 1;
 
     width: 50px;
     height: 50px;
+    margin: 10px;
 }
 .share{
     width: 50px;
     height: 50px;
     position: absolute;
     margin-top: -30px;
+    
 }
 .comment{
 
     width: 50px;
     height: 50px;
     padding-bottom: 30px;
+    margin: 10px;
 }
 .profpic{
     position: relative;
@@ -43,6 +46,7 @@ z-index: 1;
     border-radius: 50%;
     margin-left: -550px;
     margin-top: 70px;
+
 }
 
 
